low flow analysis

--- a/Peak_Flow_Analysis.ipynb
+++ b/Peak_Flow_Analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "id": "7d4e75f4",
    "metadata": {},
    "outputs": [],
@@ -21,6 +21,18 @@
     "from scipy.stats import pearson3\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.special import gammaln\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7e4a159",
+   "metadata": {},
+   "source": [
+    "In this notebook we are interested in examining and contextualizing the positive extremeness of a water year i.e., based on the maximum flow which occurred during this year, how does this year compare to the other years in our data set. Additionally, how much more extreme is this year compared to other years in our dataset.\n",
+    "\n",
+    "In the same vein, we are also interested in min flows. That analysis will be done in another notebook.\n",
+    "\n",
+    "According to various sources outlined below, we find a Pearson-III distribution to be suitable for modeling peak flows."
    ]
   },
   {
@@ -59,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "id": "f172531c",
    "metadata": {},
    "outputs": [],
@@ -122,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "id": "d0f9403e",
    "metadata": {},
    "outputs": [],
@@ -161,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "id": "d2a824e3",
    "metadata": {},
    "outputs": [
@@ -187,7 +199,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\arman\\AppData\\Local\\Temp\\ipykernel_19080\\10904722.py:72: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\arman\\AppData\\Local\\Temp\\ipykernel_24808\\10904722.py:72: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  all_data[basin]['Date'] = pd.to_datetime(all_data[basin]['Date'])\n"
      ]
     },
@@ -232,7 +244,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\arman\\AppData\\Local\\Temp\\ipykernel_19080\\10904722.py:72: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\arman\\AppData\\Local\\Temp\\ipykernel_24808\\10904722.py:72: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  all_data[basin]['Date'] = pd.to_datetime(all_data[basin]['Date'])\n"
      ]
     },
@@ -277,7 +289,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\arman\\AppData\\Local\\Temp\\ipykernel_19080\\10904722.py:72: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\arman\\AppData\\Local\\Temp\\ipykernel_24808\\10904722.py:72: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  all_data[basin]['Date'] = pd.to_datetime(all_data[basin]['Date'])\n"
      ]
     },
@@ -322,7 +334,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\arman\\AppData\\Local\\Temp\\ipykernel_19080\\10904722.py:72: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\arman\\AppData\\Local\\Temp\\ipykernel_24808\\10904722.py:72: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  all_data[basin]['Date'] = pd.to_datetime(all_data[basin]['Date'])\n"
      ]
     },
@@ -470,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "id": "896cfb8a",
    "metadata": {},
    "outputs": [
@@ -498,8 +510,118 @@
     }
    ],
    "source": [
-    "extreme_years.to_csv('extreme_years_russian_river.csv', index=False)\n",
+    "extreme_years.to_csv('peak_flow_analysis.csv', index=False)\n",
     "print(extreme_years)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f814acc2",
+   "metadata": {},
+   "source": [
+    "Rank years by peak flow extremeness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b59a3de0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Calpella (lowest → highest extremeness) ===\n",
+      "    rank  water_year  Calpella\n",
+      "0      1        2006  0.061681\n",
+      "1      2        1995  0.077037\n",
+      "2      3        1997  0.132471\n",
+      "3      4        2003  0.234402\n",
+      "4      5        2004  0.273906\n",
+      "5      6        2008  0.314114\n",
+      "6      7        1996  0.374812\n",
+      "7      8        1998  0.566969\n",
+      "8      9        1999  0.584480\n",
+      "9     10        2005  0.669255\n",
+      "10    11        2007  0.672295\n",
+      "11    12        2002  0.747369\n",
+      "12    13        2000  0.843461\n",
+      "13    14        2009  0.906408\n",
+      "14    15        2001  0.972349\n",
+      "\n",
+      "=== Guerneville (lowest → highest extremeness) ===\n",
+      "    rank  water_year  Guerneville\n",
+      "0      1        1995     0.079124\n",
+      "1      2        2006     0.079507\n",
+      "2      3        1997     0.119368\n",
+      "3      4        2004     0.180896\n",
+      "4      5        2003     0.236495\n",
+      "5      6        2008     0.255792\n",
+      "6      7        1996     0.495742\n",
+      "7      8        1998     0.511126\n",
+      "8      9        2005     0.698985\n",
+      "9     10        2000     0.722728\n",
+      "10    11        2009     0.747804\n",
+      "11    12        1999     0.767335\n",
+      "12    13        2007     0.773151\n",
+      "13    14        2002     0.844635\n",
+      "14    15        2001     0.974790\n",
+      "\n",
+      "=== Hopland (lowest → highest extremeness) ===\n",
+      "    rank  water_year   Hopland\n",
+      "0      1        2006  0.030369\n",
+      "1      2        1995  0.071123\n",
+      "2      3        2003  0.183431\n",
+      "3      4        1997  0.238961\n",
+      "4      5        2004  0.304668\n",
+      "5      6        2008  0.321909\n",
+      "6      7        2007  0.531367\n",
+      "7      8        2005  0.558313\n",
+      "8      9        1998  0.605025\n",
+      "9     10        1999  0.608070\n",
+      "10    11        1996  0.736864\n",
+      "11    12        2000  0.742595\n",
+      "12    13        2002  0.796381\n",
+      "13    14        2009  0.883116\n",
+      "14    15        2001  0.962731\n",
+      "\n",
+      "=== Warm Springs (lowest → highest extremeness) ===\n",
+      "    rank  water_year  Warm Springs\n",
+      "0      1        1995      0.033683\n",
+      "1      2        2004      0.139821\n",
+      "2      3        2003      0.162084\n",
+      "3      4        2006      0.181153\n",
+      "4      5        2008      0.240907\n",
+      "5      6        1997      0.329908\n",
+      "6      7        1996      0.369740\n",
+      "7      8        2009      0.582588\n",
+      "8      9        2005      0.591058\n",
+      "9     10        1998      0.608328\n",
+      "10    11        1999      0.742605\n",
+      "11    12        2007      0.777202\n",
+      "12    13        2000      0.875494\n",
+      "13    14        2002      0.927876\n",
+      "14    15        2001      0.931986\n"
+     ]
+    }
+   ],
+   "source": [
+    "basins = [col for col in extreme_years.columns if col != \"water_year\"]\n",
+    "\n",
+    "for basin in basins:\n",
+    "    print(f\"\\n=== {basin} (lowest → highest extremeness) ===\")\n",
+    "    \n",
+    "    ranked = (\n",
+    "        extreme_years[[\"water_year\", basin]]\n",
+    "        .sort_values(by=basin, ascending=True)  # lowest = most extreme\n",
+    "        .reset_index(drop=True)\n",
+    "    )\n",
+    "    \n",
+    "    ranked[\"rank\"] = ranked.index + 1\n",
+    "    \n",
+    "    print(ranked[[\"rank\", \"water_year\", basin]])"
    ]
   }
  ],
