--- a/Peak_Flow_Analysis.ipynb
+++ b/Peak_Flow_Analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "7d4e75f4",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "f172531c",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "d0f9403e",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "d2a824e3",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\arman\\AppData\\Local\\Temp\\ipykernel_13356\\114350542.py:84: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\arman\\AppData\\Local\\Temp\\ipykernel_37332\\362961688.py:84: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  all_data[basin]['Date'] = pd.to_datetime(all_data[basin]['Date'])\n"
      ]
     },
@@ -247,7 +247,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\arman\\AppData\\Local\\Temp\\ipykernel_13356\\114350542.py:84: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\arman\\AppData\\Local\\Temp\\ipykernel_37332\\362961688.py:84: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  all_data[basin]['Date'] = pd.to_datetime(all_data[basin]['Date'])\n"
      ]
     },
@@ -292,7 +292,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\arman\\AppData\\Local\\Temp\\ipykernel_13356\\114350542.py:84: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\arman\\AppData\\Local\\Temp\\ipykernel_37332\\362961688.py:84: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  all_data[basin]['Date'] = pd.to_datetime(all_data[basin]['Date'])\n"
      ]
     },
@@ -337,7 +337,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\arman\\AppData\\Local\\Temp\\ipykernel_13356\\114350542.py:84: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\arman\\AppData\\Local\\Temp\\ipykernel_37332\\362961688.py:84: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  all_data[basin]['Date'] = pd.to_datetime(all_data[basin]['Date'])\n"
      ]
     },
@@ -433,7 +433,7 @@
     "    scipy_pdf_vals = dist.pdf(x)\n",
     "    my_pdf_vals = pearson3_pdf(x, alpha_hat, beta_hat, tau_hat)\n",
     "\n",
-    "    extreme_years[basin] = 1 - dist.cdf(np.log10(basin_peak_flows))\n",
+    "    extreme_years[basin] = dist.cdf(np.log10(basin_peak_flows))\n",
     "\n",
     "    plt.hist(log_flows, bins=15, density=True, alpha=0.5, label='Observed log-flows')\n",
     "    plt.plot(x, my_pdf_vals, 'b-', lw=2, label='Pearson III fit')\n",
@@ -452,7 +452,7 @@
     "    peak_flow_df['extremeness'] = None\n",
     "    for i, year in enumerate(peak_flow_df['water_year'].unique()):\n",
     "        peak_flow_df.loc[peak_flow_df['water_year'] == year, 'peak_flow'] = basin_peak_flows[i]\n",
-    "        peak_flow_df.loc[peak_flow_df['water_year'] == year, 'extremeness'] = 1 - extreme_years[basin].iloc[i]\n",
+    "        peak_flow_df.loc[peak_flow_df['water_year'] == year, 'extremeness'] = extreme_years[basin].iloc[i]\n",
     "\n",
     "\n",
     "    plt.bar(\n",
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "896cfb8a",
    "metadata": {},
    "outputs": [
@@ -506,21 +506,21 @@
      "output_type": "stream",
      "text": [
       "    water_year  Calpella  Guerneville   Hopland  Warm Springs\n",
-      "0         1995  0.042507     0.066172  0.070810      0.068128\n",
-      "1         1996  0.470859     0.685985  0.563148      0.750871\n",
-      "2         1997  0.149833     0.115927  0.205303      0.224783\n",
-      "3         1998  0.304957     0.215223  0.241958      0.181046\n",
-      "4         1999  0.547643     0.595746  0.488855      0.660910\n",
-      "5         2000  0.755350     0.656343  0.629148      0.809231\n",
-      "6         2001  0.904064     0.935538  0.955197      0.928659\n",
-      "7         2002  0.487687     0.783759  0.663121      0.780572\n",
-      "8         2003  0.223598     0.161075  0.195073      0.077609\n",
-      "9         2004  0.456528     0.378165  0.364032      0.392605\n",
-      "10        2005  0.797184     0.763779  0.828445      0.796927\n",
-      "11        2006  0.056838     0.063465  0.039919      0.099247\n",
-      "12        2007  0.818750     0.871505  0.721888      0.865958\n",
-      "13        2008  0.618253     0.526475  0.619434      0.326866\n",
-      "14        2009  0.944450     0.813671  0.930287      0.645963\n"
+      "0         1995  0.957493     0.933828  0.929190      0.931872\n",
+      "1         1996  0.529141     0.314015  0.436852      0.249129\n",
+      "2         1997  0.850167     0.884073  0.794697      0.775217\n",
+      "3         1998  0.695043     0.784777  0.758042      0.818954\n",
+      "4         1999  0.452357     0.404254  0.511145      0.339090\n",
+      "5         2000  0.244650     0.343657  0.370852      0.190769\n",
+      "6         2001  0.095936     0.064462  0.044803      0.071341\n",
+      "7         2002  0.512313     0.216241  0.336879      0.219428\n",
+      "8         2003  0.776402     0.838925  0.804927      0.922391\n",
+      "9         2004  0.543472     0.621835  0.635968      0.607395\n",
+      "10        2005  0.202816     0.236221  0.171555      0.203073\n",
+      "11        2006  0.943162     0.936535  0.960081      0.900753\n",
+      "12        2007  0.181250     0.128495  0.278112      0.134042\n",
+      "13        2008  0.381747     0.473525  0.380566      0.673134\n",
+      "14        2009  0.055550     0.186329  0.069713      0.354037\n"
      ]
     }
    ],
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "b59a3de0",
    "metadata": {},
    "outputs": [
@@ -548,77 +548,77 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "=== Calpella (lowest → highest extremeness) ===\n",
+      "=== Calpella (highest → lowest extremeness) ===\n",
       "    rank  water_year  Calpella\n",
-      "0      1        1995  0.042507\n",
-      "1      2        2006  0.056838\n",
-      "2      3        1997  0.149833\n",
-      "3      4        2003  0.223598\n",
-      "4      5        1998  0.304957\n",
-      "5      6        2004  0.456528\n",
-      "6      7        1996  0.470859\n",
-      "7      8        2002  0.487687\n",
-      "8      9        1999  0.547643\n",
-      "9     10        2008  0.618253\n",
-      "10    11        2000  0.755350\n",
-      "11    12        2005  0.797184\n",
-      "12    13        2007  0.818750\n",
-      "13    14        2001  0.904064\n",
-      "14    15        2009  0.944450\n",
+      "0      1        1995  0.957493\n",
+      "1      2        2006  0.943162\n",
+      "2      3        1997  0.850167\n",
+      "3      4        2003  0.776402\n",
+      "4      5        1998  0.695043\n",
+      "5      6        2004  0.543472\n",
+      "6      7        1996  0.529141\n",
+      "7      8        2002  0.512313\n",
+      "8      9        1999  0.452357\n",
+      "9     10        2008  0.381747\n",
+      "10    11        2000  0.244650\n",
+      "11    12        2005  0.202816\n",
+      "12    13        2007  0.181250\n",
+      "13    14        2001  0.095936\n",
+      "14    15        2009  0.055550\n",
       "\n",
-      "=== Guerneville (lowest → highest extremeness) ===\n",
+      "=== Guerneville (highest → lowest extremeness) ===\n",
       "    rank  water_year  Guerneville\n",
-      "0      1        2006     0.063465\n",
-      "1      2        1995     0.066172\n",
-      "2      3        1997     0.115927\n",
-      "3      4        2003     0.161075\n",
-      "4      5        1998     0.215223\n",
-      "5      6        2004     0.378165\n",
-      "6      7        2008     0.526475\n",
-      "7      8        1999     0.595746\n",
-      "8      9        2000     0.656343\n",
-      "9     10        1996     0.685985\n",
-      "10    11        2005     0.763779\n",
-      "11    12        2002     0.783759\n",
-      "12    13        2009     0.813671\n",
-      "13    14        2007     0.871505\n",
-      "14    15        2001     0.935538\n",
+      "0      1        2006     0.936535\n",
+      "1      2        1995     0.933828\n",
+      "2      3        1997     0.884073\n",
+      "3      4        2003     0.838925\n",
+      "4      5        1998     0.784777\n",
+      "5      6        2004     0.621835\n",
+      "6      7        2008     0.473525\n",
+      "7      8        1999     0.404254\n",
+      "8      9        2000     0.343657\n",
+      "9     10        1996     0.314015\n",
+      "10    11        2005     0.236221\n",
+      "11    12        2002     0.216241\n",
+      "12    13        2009     0.186329\n",
+      "13    14        2007     0.128495\n",
+      "14    15        2001     0.064462\n",
       "\n",
-      "=== Hopland (lowest → highest extremeness) ===\n",
+      "=== Hopland (highest → lowest extremeness) ===\n",
       "    rank  water_year   Hopland\n",
-      "0      1        2006  0.039919\n",
-      "1      2        1995  0.070810\n",
-      "2      3        2003  0.195073\n",
-      "3      4        1997  0.205303\n",
-      "4      5        1998  0.241958\n",
-      "5      6        2004  0.364032\n",
-      "6      7        1999  0.488855\n",
-      "7      8        1996  0.563148\n",
-      "8      9        2008  0.619434\n",
-      "9     10        2000  0.629148\n",
-      "10    11        2002  0.663121\n",
-      "11    12        2007  0.721888\n",
-      "12    13        2005  0.828445\n",
-      "13    14        2009  0.930287\n",
-      "14    15        2001  0.955197\n",
+      "0      1        2006  0.960081\n",
+      "1      2        1995  0.929190\n",
+      "2      3        2003  0.804927\n",
+      "3      4        1997  0.794697\n",
+      "4      5        1998  0.758042\n",
+      "5      6        2004  0.635968\n",
+      "6      7        1999  0.511145\n",
+      "7      8        1996  0.436852\n",
+      "8      9        2008  0.380566\n",
+      "9     10        2000  0.370852\n",
+      "10    11        2002  0.336879\n",
+      "11    12        2007  0.278112\n",
+      "12    13        2005  0.171555\n",
+      "13    14        2009  0.069713\n",
+      "14    15        2001  0.044803\n",
       "\n",
-      "=== Warm Springs (lowest → highest extremeness) ===\n",
+      "=== Warm Springs (highest → lowest extremeness) ===\n",
       "    rank  water_year  Warm Springs\n",
-      "0      1        1995      0.068128\n",
-      "1      2        2003      0.077609\n",
-      "2      3        2006      0.099247\n",
-      "3      4        1998      0.181046\n",
-      "4      5        1997      0.224783\n",
-      "5      6        2008      0.326866\n",
-      "6      7        2004      0.392605\n",
-      "7      8        2009      0.645963\n",
-      "8      9        1999      0.660910\n",
-      "9     10        1996      0.750871\n",
-      "10    11        2002      0.780572\n",
-      "11    12        2005      0.796927\n",
-      "12    13        2000      0.809231\n",
-      "13    14        2007      0.865958\n",
-      "14    15        2001      0.928659\n"
+      "0      1        1995      0.931872\n",
+      "1      2        2003      0.922391\n",
+      "2      3        2006      0.900753\n",
+      "3      4        1998      0.818954\n",
+      "4      5        1997      0.775217\n",
+      "5      6        2008      0.673134\n",
+      "6      7        2004      0.607395\n",
+      "7      8        2009      0.354037\n",
+      "8      9        1999      0.339090\n",
+      "9     10        1996      0.249129\n",
+      "10    11        2002      0.219428\n",
+      "11    12        2005      0.203073\n",
+      "12    13        2000      0.190769\n",
+      "13    14        2007      0.134042\n",
+      "14    15        2001      0.071341\n"
      ]
     }
    ],
@@ -626,11 +626,11 @@
     "basins = [col for col in extreme_years.columns if col != \"water_year\"]\n",
     "\n",
     "for basin in basins:\n",
-    "    print(f\"\\n=== {basin} (lowest → highest extremeness) ===\")\n",
+    "    print(f\"\\n=== {basin} (highest → lowest extremeness) ===\")\n",
     "    \n",
     "    ranked = (\n",
     "        extreme_years[[\"water_year\", basin]]\n",
-    "        .sort_values(by=basin, ascending=True)  # lowest = most extreme\n",
+    "        .sort_values(by=basin, ascending=False)  # highest = most extreme\n",
     "        .reset_index(drop=True)\n",
     "    )\n",
     "    \n",
